# poetry_template

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  python-package.yml
docs/source/: about.md  conf.py  index.rst
poetry_template/: __main__.py
sparta_control/: __main__.py
tests/: test_poetry_template.py  test_sparta_control.py
