[tool.poetry]
name = "SPARTA_control"
version = "0.1.0"
description = ""
authors = ["Research Computing Service, Imperial College London <rcs-support@imperial.ac.uk>"]
readme = "README.md"
homepage = "https://github.com/ImperialCollegeLondon/SPARTA_control"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.2"
mypy = "^0.780"
black = "^19.10b0"
pre-commit = "^2.4.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

