[tool.poetry]
name = "poetry_template"
version = "0.1.0"
description = ""
authors = ["Research Computing Service, Imperial College London <rcs-support@imperial.ac.uk>"]
readme = "README.md"
homepage = "https://github.com/ImperialCollegeLondon/poetry_template"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sphinx = "^3.0.4"
recommonmark = "^0.6.0"
flake8 = "^3.8.2"
mypy = "^0.780"
black = "^19.10b0"
pre-commit = "^2.4.0"
pytest-mypy = "^0.6.2"
pytest-cov = "^2.9.0"
pytest-flake8 = "^1.0.6"
pytest-mock = "^3.1.1"
bump2version = "^1.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

